--- a/public/04-article.html
+++ b/public/04-article.html
@@ -329,8 +329,8 @@
           </div>
           <div class="tabs"> 
             <div class="row">
-              <div class="col"></div>
-              <div class="col-xl-7 col-md-8">
+              <div class="col-xxl-5 col-md-4"></div>
+              <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
                               <div class="s-team__img-wrap-sm"><img src="img/team-1.png" alt=""/>
@@ -376,7 +376,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -404,7 +404,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -432,7 +432,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -460,7 +460,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -489,7 +489,7 @@
                           <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                           <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
