--- a/public/index.html
+++ b/public/index.html
@@ -369,28 +369,27 @@
         <!-- .Promo /-->
         <!-- / .Works-->
         <section class="wrks-wrap section scrollable fp-auto-height">
-          <div class="wrks">
-            <div class="d-lg-none text-center">
-              <h2>Наши работы</h2>
-            </div>
-            <div class="wrks__head d-none d-lg-block">
+          <div class="wrks"> 
+            <div class="wrks__head">
               <div class="wrks_bg">
                 <div class="container pg__ttl">
                   <h2>Наши работы</h2>
                 </div>
-                <ul class="etabs wrks__tbs-links">
-                  <li class="active"><a href="#tab1">Все работы</a></li>
-                  <li> <a href="#tab1">Веб</a></li>
-                  <li> <a href="#tab1">Упаковка</a></li>
-                  <li> <a href="#tab1">Полиграфия</a></li>
-                  <li> <a href="#tab1">Мобильные приложения</a></li>
-                  <!--
-                  <li><a href="#tab2"></a></li>
-                  <li><a href="#tab3"></a></li>
-                  <li><a href="#tab4"></a></li>
-                  <li><a href="#tab5" class="nw"></a></li>
-                  -->
-                </ul>
+                <div class="d-none d-lg-block">
+                  <ul class="etabs wrks__tbs-links">
+                    <li class="active"><a href="#tab1">Все работы</a></li>
+                    <li> <a href="#tab1">Веб</a></li>
+                    <li> <a href="#tab1">Упаковка</a></li>
+                    <li> <a href="#tab1">Полиграфия</a></li>
+                    <li> <a href="#tab1">Мобильные приложения</a></li>
+                    <!--
+                    <li><a href="#tab2"></a></li>
+                    <li><a href="#tab3"></a></li>
+                    <li><a href="#tab4"></a></li>
+                    <li><a href="#tab5" class="nw"></a></li>
+                    -->
+                  </ul>
+                </div>
               </div>
             </div>
             <div class="js-tabs wrks__tbs">
@@ -559,7 +558,7 @@
                 </div>
                 <!-- end s-about-->
               </div>
-              <div class="slider-about__slide swiper-slide d-none d-lg-block">
+              <div class="slider-about__slide slider-about__slide--team swiper-slide d-none d-lg-flex">
                 <!-- / .Team-->
                 <div class="s-team section tm">
                   <div class="container">
@@ -569,8 +568,8 @@
                     </div>
                     <div class="tabs"> 
                       <div class="row">
-                        <div class="col"></div>
-                        <div class="col-xl-7 col-md-8">
+                        <div class="col-xxl-5 col-md-4"></div>
+                        <div class="col">
                           <div class="tabs__caption">
                                       <div class="s-team__slide-sm tabs__btn active">
                                         <div class="s-team__img-wrap-sm"><img src="img/team-1.png" alt=""/>
@@ -616,7 +615,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                                   </button>
                                 </div>
                               </div>
@@ -644,7 +643,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                                   </button>
                                 </div>
                               </div>
@@ -672,7 +671,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                                   </button>
                                 </div>
                               </div>
@@ -700,7 +699,7 @@
                                     </div>
                                     <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                                   </button>
                                 </div>
                               </div>
@@ -729,7 +728,7 @@
                                     <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                                     <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                                   </div>
-                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                                  <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                                   </button>
                                 </div>
                               </div>
@@ -952,8 +951,8 @@
           </div>
           <div class="tabs"> 
             <div class="row">
-              <div class="col"></div>
-              <div class="col-xl-7 col-md-8">
+              <div class="col-xxl-5 col-md-4"></div>
+              <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
                               <div class="s-team__img-wrap-sm"><img src="img/team-1.png" alt=""/>
@@ -999,7 +998,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -1027,7 +1026,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -1055,7 +1054,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -1083,7 +1082,7 @@
                           </div>
                           <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
@@ -1112,7 +1111,7 @@
                           <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
                           <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
                         </div>
-                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span>О нас</span>
+                        <button class="s-team__btn btt btt-lg btn-block btt-blue" type="button"><span class="d-none d-md-block">О нас</span><span class="d-md-none">Назад</span>
                         </button>
                       </div>
                     </div>
