--- a/public/03-blog.html
+++ b/public/03-blog.html
@@ -55,9 +55,9 @@
           <div class="container">
             <div class="row">
               <div class="col-2 d-md-none"><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a></div>
-              <div class="col-md-auto col-8 text-center"><a class="top-nav__logo logo crls__logo" href="#">
-                <div class="logo_main wow fadeInLeft"><img class="res-i" src="img/logo-name.svg" alt=""/></div>
-                <div class="logo_name wow fadeInRight"><img class="res-i" src="img/logo.svg" alt=""/></div></a>
+              <div class="col-md-auto col-8 text-center"><a class="top-nav__logo logo crls__logo" href="/">
+                <div class="logo_main wow fadeInLeft"><img class="res-i" src="img/logo.svg" alt=""/></div>
+                <div class="logo_name wow fadeInRight"><img class="res-i" src="img/logo-name.svg" alt=""/></div></a>
               </div>
               <div class="col d-none d-md-block">
                 <ul class="top-nav__nav">
@@ -278,23 +278,23 @@
               <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
-                              <div class="s-team__img-wrap-sm"><img src="img/team-1.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/team-2.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/team-3.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/team-4.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/team-5.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
                               </div>
                             </div>
                 </div>
@@ -307,7 +307,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
-                        </div><img class="res-i" src="img/team-1.png" alt=""/>
+                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -335,7 +335,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
-                        </div><img class="res-i" src="img/team-2.png" alt=""/>
+                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -363,7 +363,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
-                        </div><img class="res-i" src="img/team-3.png" alt=""/>
+                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -391,7 +391,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
-                        </div><img class="res-i" src="img/team-4.png" alt=""/>
+                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -419,7 +419,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
-                        </div><img class="res-i" src="img/team-5.png" alt=""/>
+                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -458,6 +458,8 @@
     <script src="libs/fullPage.js/vendors/scrolloverflow.min.js"></script>
     <script src="libs/fullPage.js/fullpage.min.js"> </script>
     <script src="libs/imagesloaded.pkgd.min.js"> </script>
+    <script src="libs/picturefill.min.js"> </script>
+    <script src="libs/ofi.min.js"> </script>
     <script src="libs/masonry/dist/masonry.pkgd.min.js"></script>
     <!-- modal libs-->
     <script src="libs/magnificPopup/jquery.magnific-popup.min.js"></script>
