--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,11 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="img/head-img-1.png" alt=""/></div>
+                          <div class="prm_pht">
+                            <picture>
+                              <source srcset="img/head-img-1.png" media="(min-width: 576px)"/><img src="img/head-img-1-sm.png" alt=""/>
+                            </picture>
+                          </div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -208,7 +212,11 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="img/head-img-2.png" alt=""/></div>
+                          <div class="prm_pht">
+                            <picture>
+                              <source srcset="img/head-img-2.png" media="(min-width: 576px)"/><img src="img/head-img-2-sm.png" alt=""/>
+                            </picture>
+                          </div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -242,7 +250,11 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="img/head-img-3.png" alt=""/></div>
+                          <div class="prm_pht">
+                            <picture>
+                              <source srcset="img/head-img-3.png" media="(min-width: 576px)"/><img src="img/head-img-3-sm.png" alt=""/>
+                            </picture>
+                          </div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -275,7 +287,11 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="img/head-img-4.png" alt=""/></div>
+                          <div class="prm_pht">
+                            <picture>
+                              <source srcset="img/head-img-4.png" media="(min-width: 576px)"/><img src="img/head-img-4-sm.png" alt=""/>
+                            </picture>
+                          </div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -310,7 +326,11 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht img-mr"><img src="img/head-img-5.png" alt=""/></div>
+                          <div class="prm_pht img-mr">
+                            <picture>
+                              <source srcset="img/head-img-5.png" media="(min-width: 576px)"/><img src="img/head-img-5-sm.png" alt=""/>
+                            </picture>
+                          </div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -344,7 +364,11 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="img/head-img-6.png" alt=""/></div>
+                          <div class="prm_pht">
+                            <picture>
+                              <source srcset="img/head-img-6.png" media="(min-width: 576px)"/><img src="img/head-img-6-sm.png" alt=""/>
+                            </picture>
+                          </div>
                         </div>
                       </div>
                       <div class="d-md-none">
