--- a/public/02-servise.html
+++ b/public/02-servise.html
@@ -129,7 +129,7 @@
                         <li><a class="s-servises__link" href="#">Сайт визитка</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i" src="img/loadgif.gif" data-src="img/servises-1.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/servises-1.png"/>
                       </div>
                     </div>
                   </div>
@@ -153,7 +153,7 @@
                         <li><a class="s-servises__link" href="#">Наружная реклама</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i" src="img/loadgif.gif" data-src="img/servises-2.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/servises-2.png"/>
                       </div>
                     </div>
                   </div>
@@ -171,7 +171,7 @@
                         <li><a class="s-servises__link" href="#">Упаковка бизнеса</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i" src="img/loadgif.gif" data-src="img/servises-3.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/servises-3.png"/>
                       </div>
                     </div>
                   </div>
