--- a/public/index.html
+++ b/public/index.html
@@ -801,7 +801,7 @@
                         <li><a class="s-servises__link" href="#">Сайт визитка</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="img/servises-1.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/loadgif.gif" data-src="img/servises-1.png"/>
                       </div>
                     </div>
                   </div>
@@ -825,7 +825,7 @@
                         <li><a class="s-servises__link" href="#">Наружная реклама</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="img/servises-2.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/loadgif.gif" data-src="img/servises-2.png"/>
                       </div>
                     </div>
                   </div>
@@ -843,7 +843,7 @@
                         <li><a class="s-servises__link" href="#">Упаковка бизнеса</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="img/servises-3.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/loadgif.gif" data-src="img/servises-3.png"/>
                       </div>
                     </div>
                   </div>
