edit size portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -148,10 +148,10 @@
           <div class="prm">
             <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
             <!-- / WRP-->
-            <div class="prm__pxs pxs">
-              <div class="px1 px px-1" id="px1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-              <div class="px2 px px-2" id="px2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-              <div class="px3 px px-3" id="px3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
+            <div class="prm__pxs pxs d-none d-sm-block">
+              <div class="px1 px px-1" id="px1"><img src="#" data-src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
+              <div class="px2 px px-2" id="px2"><img src="#" data-src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
+              <div class="px3 px px-3" id="px3"><img src="#" data-src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
             </div>
             <div class="prm__slider prm__slider--js swiper-container">
               <div class="swiper-wrapper">
@@ -419,7 +419,9 @@
             <div class="js-tabs wrks__tbs">
               <div class="wrks__tbs-itm" id="tab1">
                 <div class="arn-msnr"><a class="cl cl-7 itm full-modal-open-js" href="#" data-img="img/project-1.jpg">
-                  <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-1-sm.jpg" alt=""/></picture>
+                  <picture>
+                    <source srcset="img/img/project-1-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-1-xs.jpg" alt=""/>
+                  </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -428,7 +430,9 @@
                     </div>
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a><a class="cl cl-5 itm full-modal-open-js" href="#" data-img="img/project-2.jpg">
-                  <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-2-sm.jpg" alt=""/></picture>
+                  <picture>
+                    <source srcset="img/img/project-2-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-2-xs.jpg" alt=""/>
+                  </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -439,7 +443,9 @@
                   </div></a>
                   <div class="cl-7">
                     <div class="arn-msnr"><a class="cl cl-7 itm ht6 full-modal-open-js" href="#" data-img="img/project-3.jpg">
-                      <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-3-sm.jpg" alt=""/></picture>
+                      <picture>
+                        <source srcset="img/img/project-3-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-3-xs.jpg" alt=""/>
+                      </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -449,7 +455,9 @@
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-5 itm ht6 full-modal-open-js" href="#" data-img="img/project-4.jpg">
-                      <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-4-sm.jpg" alt=""/></picture>
+                      <picture>
+                        <source srcset="img/img/project-4-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-4-xs.jpg" alt=""/>
+                      </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -460,7 +468,9 @@
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-7 itm ht5 full-modal-open-js" href="#" data-img="img/project-5.jpg">
-                      <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-5-sm.jpg" alt=""/></picture>
+                      <picture>
+                        <source srcset="img/img/project-5-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-5-xs.jpg" alt=""/>
+                      </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -471,7 +481,9 @@
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-5 itm ht5 full-modal-open-js" href="#" data-img="img/project-6.jpg">
-                      <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-6-sm.jpg" alt=""/></picture>
+                      <picture>
+                        <source srcset="img/img/project-6-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-6-xs.jpg" alt=""/>
+                      </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title"> Листовка   для <span class="thm d-inline-block">сети  кальянных </span> 
@@ -483,7 +495,9 @@
                     </div>
                   </div>
                   <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 full-modal-open-js" href="#" data-img="img/project-7.jpg">
-                    <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-7-sm.jpg" alt=""/></picture>
+                    <picture>
+                      <source srcset="img/img/project-7-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-7-xs.jpg" alt=""/>
+                    </picture>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">кроссфит проекта</span>
@@ -492,7 +506,9 @@
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a><a class="cl cl-12 itm full-modal-open-js" href="#" data-img="img/project-8.jpg">
-                    <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-8-sm.jpg" alt=""/></picture>
+                    <picture>
+                      <source srcset="img/img/project-8-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-8-xs.jpg" alt=""/>
+                    </picture>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">квест-комнаты</span> 
@@ -502,7 +518,9 @@
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a>
                   </div><a class="cl cl-7 itm full-modal-open-js" href="#" data-img="img/project-9.jpg">
-                  <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-9-sm.jpg" alt=""/></picture>
+                  <picture>
+                    <source srcset="img/img/project-9-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-9-xs.jpg" alt=""/>
+                  </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -511,7 +529,9 @@
                     </div>
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a><a class="cl cl-5 itm lst" href="#">
-                  <picture><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-all.jpg" alt=""/></picture>
+                  <picture>
+                    <source srcset="img/img/project-all-xs.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-all.jpg" alt=""/>
+                  </picture>
                   <div class="itm__more" id="loadWorks">
                     <big class="thm d-inline-block">
                       <big>+34</big><br/> проекта 
